* MARSSkfss had bug on V0T line.  * instead of %*%.  This code is almost never called.
* MARSSkfss had bug.  Did not check if G was time-varying.  This code is almost never called.
* Add if statement to declare S3 objects in NAMESPACE if user has broom package installed.
* Typo in User Guide Chapter 2.  R was supposed to be "diagonal and equal" in the first example.


CHANGES IN MARSS 3.10
------------------------------------

The main changes have to do with residuals and confidence intervals calculations.  

BUGS

residuals.marssMLE()
* Erroneous standardized residuals when Z was non-diagonal (and thus also > 1 row). Also changed residuals.MARSSMLE so it returns residuals (which would be equal to 0) when there are 0s on the diagonal of Q or R
* If t=1 and x0 was fixed, residuals were not returned.
* The wrong residuals were returned if there were any missing values.  Fix involved implementing the missing values modifications for the Kalman filter described in Shumway and Stoffer.

inits functions
* in MARSSinits_marxss() function would give error if U, A, C, or D fixed and user passed in inits.  inits ignored in this case so should not throw error.
* alldefaults could be updated by form.  A few functions were neglecting to (re)load alldefaults or to ressign alldefaults when updated: is_marssMLE(), MARSSinits.marxss(), MARSSinits().  The variables in the pkg_globals environment should be (and only be) loaded when needed by a function and only loaded into the function environment.

kalman filter functions
* MARSSkf() was not passing optional function args to MARSSkfas().
* MARSSkfss() mis-counting num data points when R=0, V0=0, and tinitx=1.  When Ft[,,1]=0 (e.g. when R=0, V0=0, and tinitx=1), MARSSkfss was including the y[1] associated with Ft[,,1]=0 in the # number of data points.  These should be excluded since they don't affect x10.

Confidence intervals and std error for R and Q